# tweet_reaction_prediction

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.api.txt
.github/workflows/: cd.yml  ci.yml
docs/: article.md
models/best/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
models/best/data/: model.pth
notebooks/: 01_eda.ipynb  02_results_baseline.ipynb  03_results_dl.ipynb
src/api/: alerting.py  app.py  feedback_store.py  model_loader.py  schemas.py
src/models/: analyze_baseline.py  analyze_dl.py  export_best_model.py  export_best_tokenizer.py  train_baseline.py  train_dl.py
src/models/impl/: bert_torch.py  embeddings_gensim.py  hf_dataset.py  lstm_torch.py  simple_torch.py  text_common_torch.py  text_preprocess_nltk.py
tests/: conftest.py  test_api.py  test_feedback_store.py
ui_streamlit/: app.py
