[project]
name = "tweet-reaction-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "Aurélien Gruzon",email = "aureliengruzon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "scikit-learn (<1.5)",
    "numpy (<2.1)",
    "pandas (<2.3)",
    "matplotlib (<3.9)",
    "seaborn (<0.14)",
    "mlflow (>=3.8.1,<4.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "transformers (>=4.57.6,<5.0.0)",
    "accelerate (>=1.12.0,<2.0.0)",
    "sentence-transformers (>=5.2.0,<6.0.0)",
    "pygments (>=2.19.2,<3.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
